deploy/apps/web-public/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-public
  labels:
    app: web-public
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: web-public
