deploy/apps/web-public/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-public
  labels:
    app: web-public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.vartulaa.com
    - vartulaa.com
    secretName: web-public-tls
  rules:
  - host: www.vartulaa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-public
            port:
              number: 80
  - host: vartulaa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-public
            port:
              number: 80
